Update venue for Parus publication

--- a/_publications/2024-12-02-parus.md
+++ b/_publications/2024-12-02-parus.md
@@ -5,7 +5,7 @@ category: conferences
 permalink: /publication/2024-12-02-parus
 excerpt: ''
 date: 2024-12-02
-venue: 'GitHub Journal of Bugs'
+venue: 'The International Conference on Animal-Computer Interaction'
 paperurl: 'http://kibaraki.github.io/files/parus.pdf'
 citation: 'Artem Abzaliev*, <b>Katsumi Ibaraki</b>*, Kohei Shibata, and Rada Mihalcea. 2024. Vocalizations of the Parus minor Bird: Taxonomy and Automatic Classification. In <i>Proceedings of the International Conference on Animal-Computer Interaction (ACI 2024)</i>, Article 8, pages 1–10, New York, NY, USA. Association for Computing Machinery. (* equal contribution)'
 ---
