Change category from preprint to conferences

--- a/_publications/2025-09-17-low-aug.md
+++ b/_publications/2025-09-17-low-aug.md
@@ -1,7 +1,7 @@
 ---
 title: "Frustratingly Easy Data Augmentation for Low-Resource ASR"
 collection: publications
-category: preprint
+category: conferences
 permalink: /publication/2025-09-17-low-aug
 excerpt: ''
 date: 2025-09-17
