Update paper link and citation in publication markdown

--- a/_publications/2025-09-17-low-aug.md
+++ b/_publications/2025-09-17-low-aug.md
@@ -10,6 +10,7 @@ paperurl: 'http://kibaraki.github.io/files/low_resource_asr_aug.pdf'
 citation: 'Katsumi Ibaraki and David Chiang. 2025. Frustratingly Easy Data Augmentation for Low-Resource ASR. preprint'
 ---
 
-[[Paper]]() 
+[[Paper]](http://arxiv.org/abs/2509.15373) 
 
 Shinekhen Buryat [dataset](https://huggingface.co/datasets/kibaraki/Shinekhen-Buryat), [model](https://huggingface.co/kibaraki/wav2vec2-large-xlsr-53-shinekhen-buryat)
+
