Revise citation and add BibTeX for the paper
Updated citation format and added BibTeX entry.

--- a/_publications/2025-09-17-low-aug.md
+++ b/_publications/2025-09-17-low-aug.md
@@ -7,10 +7,21 @@ excerpt: ''
 date: 2025-09-17
 venue: ''
 paperurl: 'http://kibaraki.github.io/files/low_resource_asr_aug.pdf'
-citation: 'Katsumi Ibaraki and David Chiang. 2025. Frustratingly Easy Data Augmentation for Low-Resource ASR. preprint'
+citation: 'Katsumi Ibaraki and David Chiang. 2025. Frustratingly easy data augmentation for low-resource ASR. Preprint, arXiv:2509.15373.'
 ---
 
 [[Paper]](http://arxiv.org/abs/2509.15373) 
 
 Shinekhen Buryat [dataset](https://huggingface.co/datasets/kibaraki/Shinekhen-Buryat), [model](https://huggingface.co/kibaraki/wav2vec2-large-xlsr-53-shinekhen-buryat)
 
+```
+@misc{ibaraki2025frustratinglyeasydataaugmentation,
+      title={Frustratingly Easy Data Augmentation for Low-Resource ASR}, 
+      author={Katsumi Ibaraki and David Chiang},
+      year={2025},
+      eprint={2509.15373},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2509.15373}, 
+}
+```
