--- a/_publications/2024-05-01-bias.md
+++ b/_publications/2024-05-01-bias.md
@@ -7,7 +7,7 @@ excerpt: ''
 date: 2024-05-01
 venue: 'The Joint International Conference on Computational Linguistics, Language Resources and Evaluation'
 paperurl: 'http://kibaraki.github.io/files/2024.lrec-main.86.pdf'
-citation: '<b>Katsumi Ibaraki<b>, Winston Wu, Lu Wang, and Rada Mihalcea. 2024. Analyzing occupational distribution representation in Japanese language models. In Proceedings of the 2024 Joint International Conference on Computational Linguistics, Language Resources and Evaluation (LREC-COLING 2024), pages 959–973, Torino, Italia. ELRA and ICCL'
+citation: '<b>Katsumi Ibaraki</b>, Winston Wu, Lu Wang, and Rada Mihalcea. 2024. Analyzing occupational distribution representation in Japanese language models. In Proceedings of the 2024 Joint International Conference on Computational Linguistics, Language Resources and Evaluation (LREC-COLING 2024), pages 959–973, Torino, Italia. ELRA and ICCL'
 ---
 
 [[Paper]](https://aclanthology.org/2024.lrec-main.86/) 
