Format citation with bold for author names

--- a/_publications/2025-09-17-low-aug.md
+++ b/_publications/2025-09-17-low-aug.md
@@ -7,7 +7,7 @@ excerpt: ''
 date: 2025-09-17
 venue: ''
 paperurl: 'http://kibaraki.github.io/files/low_resource_asr_aug.pdf'
-citation: 'Katsumi Ibaraki and David Chiang. 2025. Frustratingly easy data augmentation for low-resource ASR. Preprint, arXiv:2509.15373.'
+citation: '<b>Katsumi Ibaraki</b> and David Chiang. 2025. Frustratingly easy data augmentation for low-resource ASR. Preprint, arXiv:2509.15373.'
 ---
 
 [[Paper]](http://arxiv.org/abs/2509.15373) 
