Fix formatting in citation title for ASR paper

--- a/_publications/2025-09-17-low-aug.md
+++ b/_publications/2025-09-17-low-aug.md
@@ -16,7 +16,7 @@ Shinekhen Buryat [dataset](https://huggingface.co/datasets/kibaraki/Shinekhen-Bu
 
 ```
 @misc{ibaraki2025frustratinglyeasydataaugmentation,
-      title={Frustratingly Easy Data Augmentation for Low-Resource ASR}, 
+      title={Frustratingly Easy Data Augmentation for Low-Resource {ASR}}, 
       author={Katsumi Ibaraki and David Chiang},
       year={2025},
       eprint={2509.15373},
