Revise citation format in parus.md
Updated citation to remove conference year from location.

--- a/_publications/2024-12-02-parus.md
+++ b/_publications/2024-12-02-parus.md
@@ -7,7 +7,7 @@ excerpt: ''
 date: 2024-12-02
 venue: 'The International Conference on Animal-Computer Interaction'
 paperurl: 'http://kibaraki.github.io/files/parus.pdf'
-citation: 'Artem Abzaliev*, <b>Katsumi Ibaraki</b>*, Kohei Shibata, and Rada Mihalcea. 2024. Vocalizations of the Parus minor bird: Taxonomy and automatic classification. In <i>Proceedings of the International Conference on Animal-Computer Interaction</i>, ACI \'24, New York, NY, USA. Association for Computing Machinery. (* equal contribution)'
+citation: 'Artem Abzaliev*, <b>Katsumi Ibaraki</b>*, Kohei Shibata, and Rada Mihalcea. 2024. Vocalizations of the Parus minor bird: Taxonomy and automatic classification. In <i>Proceedings of the International Conference on Animal-Computer Interaction</i>, New York, NY, USA. Association for Computing Machinery. (* equal contribution)'
 ---
 
 
