Add repository link to low-aug publication

--- a/_publications/2025-09-17-low-aug.md
+++ b/_publications/2025-09-17-low-aug.md
@@ -12,6 +12,8 @@ citation: '<b>Katsumi Ibaraki</b> and David Chiang. 2025. Frustratingly easy dat
 
 [[Paper]](http://arxiv.org/abs/2509.15373) 
 
+[Repository](https://github.com/kibaraki/frustratingly-easy-asr-augmentation)
+
 Shinekhen Buryat [dataset](https://huggingface.co/datasets/kibaraki/Shinekhen-Buryat), [model](https://huggingface.co/kibaraki/wav2vec2-large-xlsr-53-shinekhen-buryat)
 
 ```
